# OpenGL-examples-notes

./: README.md
src/: CMakeLists.txt
src/renderer/: CMakeLists.txt  indexBuffer.cpp  indexBuffer.hh  renderer.cpp  renderer.hh  shader.cpp  shader.hh  vertexArray.cpp  vertexArray.hh  vertexBuffer.cpp  vertexBuffer.hh  vertexBufferLayout.hh
src/resources/shaders/: BasicShader  BasicShaderWithUniform
src/standalone_examples/: Application.cpp  CMakeLists.txt  IndexBuffer.cpp  Shader.cpp  ShaderAllInOne.cpp  Uniform.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferNDefaultArray.cpp  utils.hh
